# pktvisor

./: .conanrc  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
.github/actions/build-cpp/: Dockerfile  action.yml  entrypoint.sh
.github/actions/build-go/: Dockerfile  action.yml
.github/codeql/: config.yml  security.qls
.github/workflows/: build-develop.yml  build-release.yml  build_cross.yml  build_debug.yml  code-ql.yml
3rd/datasketches/common/: CMakeLists.txt
RFCs/: 2022-06-23-307-config.md
appimage/: Dockerfile.part  Makefile  README.md
appimage/pktvisor/: TerminalEmulatorRequired.txt
automated_tests/: requirements.txt
automated_tests/docs/pktvisor/: create_a_policy_using_admin_permission_with_all_handlers.md  create_a_policy_using_admin_permission_with_only_one_handler.md  create_a_policy_without_admin_permission.md  remove_a_policy_without_admin_permission.md  remove_policies_using_admin_permission_from_pktvisor_instance.md  run_multiple_pktvisors_instances_using_different_ports.md  run_multiple_pktvisors_instances_using_the_same_ports.md  run_pktvisor_instance_using_docker_command.md
automated_tests/features/steps/: test_config.py
centralized_collection/elastic/docker/with_telegraf/: Dockerfile
centralized_collection/prometheus/: README.md
centralized_collection/prometheus/docker-grafana-agent/: Dockerfile
cmake/: CodeCoverage.cmake  opentelemetry-proto.cmake
cmd/pktvisor-pcap/: CMakeLists.txt
cmd/pktvisor-reader/: CMakeLists.txt
cmd/pktvisord/: CMakeLists.txt  CrashpadHandler.h
docker/: Dockerfile  Dockerfile.crashhandler  Makefile  entry-cp.sh
golang/internal/ui/: dns.go  ui.go
golang/pkg/client/: types.go
libs/visor_dns/: CMakeLists.txt
libs/visor_tcp/: CMakeLists.txt
libs/visor_test/: CMakeLists.txt
libs/visor_utils/: CMakeLists.txt
src/: CMakeLists.txt  Metrics.h  OpenTelemetry.h
src/handlers/: CMakeLists.txt
src/handlers/bgp/: CMakeLists.txt
src/handlers/dhcp/: CMakeLists.txt
src/handlers/dns/: DnsResource.cpp  DnsResource.h  DnsStreamHandler.cpp  DnsStreamHandler.h
src/handlers/dns/v1/: CMakeLists.txt  DnsStreamHandler.cpp  DnsStreamHandler.h
src/handlers/dns/v2/: CMakeLists.txt  DnsStreamHandler.cpp  DnsStreamHandler.h
src/handlers/flow/: FlowStreamHandler.cpp  FlowStreamHandler.h  test_flows.cpp
src/handlers/net/v1/: CMakeLists.txt
src/handlers/net/v2/: CMakeLists.txt
src/handlers/ns1dns/: CMakeLists.txt  NS1DnsHandler.conf  orgid_db.cpp  orgid_db.h  types.h
src/handlers/ns1dns/tests/: temp_dir.h  test_orgid_db.cpp  test_orgid_lookup.cpp
src/handlers/pcap/: CMakeLists.txt
src/inputs/dnstap/: CMakeLists.txt  DnstapInputStream.h  UnixFrameSession.h
src/inputs/flow/: CMakeLists.txt  NetflowData.h  SflowData.h
src/inputs/mock/: CMakeLists.txt
src/inputs/netprobe/: CMakeLists.txt
src/inputs/pcap/: CMakeLists.txt
src/tests/fixtures/: nf5.pcap
